--- a/client/index.jade
+++ b/client/index.jade
@@ -3,6 +3,15 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Prototype
+    link(rel='stylesheet', href='style.css')
   body
-    h1 Hello, World
-    script(src='/vendor/jquery/dist/jquery.js')
+    h1 simple program
+    input#nums(type='text', autofocus=true, placeholder='enter number please for the love of god')
+    button#add SUM
+    span#sum
+    h2 Odds
+    ul#odds
+    h2 Evens
+    ul#evens
+    script(src='vendor/jquery/dist/jquery.js')
+    script(src='main.js')
